--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 							<footer>
 								<div class="yyu"></div>
 								<ul class="actions">
-									<li><a href="#" class="button large">Projects</a></li>
-									<li><a href="#" class="button alt large">About Me</a></li>
+									<li><a href="#sec2" class="button large">Projects</a></li>
+									<li><a href="ABOUT.html" class="button alt large">About Me</a></li>
 								</ul>
 							</footer>
 						</section>
